tdf#52316 Writer status bar: show also printed page counts

if they are different from the "normal" page counts.

If the document contains automatically inserted blank
pages, and the document setting "Print automatically
inserted blank pages" is disabled, the status bar still
shows page counts with blank pages. This is a problem
especially, if the user wants to print a document range,
because it's not possible to read the correct printing
range from the status bar, and using the showed values,
printing can result unwanted and missing printed pages
without any notice.

Now, for example, if the title page followed an
automatically inserted blank page and a third page,
the status bar shows the following on the third
page, if there is a differency in printing:

Page 3 of 3 (Page 2 of 2 to print)

If the setting "Print automatically inserted blank
pages" of the actual document is enabled on page
"LibreOffice Writer" of the File->Print... dialog
window, or the document doesn't contain automatically
inserted blank pages, there is no information
about printed pages in the status bar (because there
is no differency in page counting):

Page 3 of 3

Change-Id: I4cef762b8a8c10ae8f65d27c7ff550855219621e